--- a/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movieDetailStyle.css
+++ b/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movieDetailStyle.css
@@ -35,11 +35,17 @@
 }
 
 .showtime-div .showtime {
+    text-decoration: none;
     padding: 10px 15px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
+}
+
+.showtime-div .showtime:hover {
+    cursor: pointer;
+    background-color: green;
 }
 
 .container a {
