--- a/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movie/updateMovieStyle.css
+++ b/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movie/updateMovieStyle.css
@@ -9,7 +9,7 @@
     margin: 50px auto;
     padding: 30px 20px;
     border-radius: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
 }
 
 .container h1 {
