--- a/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movieDetailStyle.css
+++ b/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/movieDetailStyle.css
@@ -2,15 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #cccccc;
 }
 
 .container {
+    background-color: white;
     width: 500px;
     margin: 50px auto;
     padding: 30px 20px;
     border-radius: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
 }
 
 .container h1 {
@@ -32,6 +32,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    margin-bottom: 30px;
 }
 
 .showtime-div .showtime {
