--- a/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/schedule/listScheduleStyle.css
+++ b/Module_05/Session_05/TPLUS_JV250321_MD05_Session05_Bai01/src/main/webapp/css/schedule/listScheduleStyle.css
@@ -12,7 +12,7 @@ body {
     margin: 30px;
     padding: 20px 50px;
     border-radius: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
     background-color: white;
 }
 
@@ -56,12 +56,10 @@ table thead tr th {
 }
 
 table thead tr th:first-child {
-    border: 1px solid #007bff;
     border-top-left-radius: 5px;
 }
 
 table thead tr th:last-child {
-    border: 1px solid #007bff;
     border-top-right-radius: 5px;
 }
 
