--- a/Module_05/Session_10/TPLUS_JV250321_MD05_Session10_Bai01/src/main/resources/templates/room/list.html
+++ b/Module_05/Session_10/TPLUS_JV250321_MD05_Session10_Bai01/src/main/resources/templates/room/list.html
@@ -8,6 +8,7 @@
 <body>
 <div class="container">
     <h1>Danh sách phòng</h1>
+    <a th:href="@{/statistic}">Thống kê</a>
     <a href="/room/add" class="btn">+ Thêm phòng</a>
 
     <table>
